--- a/Website/style/classic.css
+++ b/Website/style/classic.css
@@ -2,118 +2,199 @@
 
 @import url("classic_sz.css");
 @import url("layout.css");
-@import url("paragraph.css");
+@import url("content.css");
+@import url("title.css");
+@import url("more.css");
 
-div#page {
-  padding-bottom: 2em;
+body {
+  background: #996666;
 }
+
+div#PAGE {
+  border-style: outset;
+  border-left-width: thin;
+  border-right-width: thin;
+  border-top-width: 0em;
+  border-bottom-width: 0em;
+}
+
 /* Styles de texte */
 
-div#title p#introduction {
+div#TITLE p#INTRODUCTION {
   font-size: 80%;
   letter-spacing: 0.05em;
 }
 
-div#title p#headline {
-  color: #bbb;
+div#TITLE p#HEADLINE {
+  color: #CCCCCC;
   letter-spacing: 0.33em;
   text-align: center;
   text-transform: uppercase;
 }
 
-div#content h1,
-div#content h2,
-div#content h3,
-div#content h4,
-div#content h5,
-div#content h6 {
+div#CONTENT h1,
+div#CONTENT h2,
+div#CONTENT h3,
+div#CONTENT h4,
+div#CONTENT h5,
+div#CONTENT h6 {
   font-weight: normal;
 }
 
-
-div#content h1 {
-  color: #cc6600;
-  letter-spacing: 0.1em;
+div#CONTENT h1 {
+  font-family: Palatino,Adobe Palatino,URW Palladio,URW Palladio L,Palladio,Bitstream Vera Serif,Times,Georgia,serif;
+  color: #CC6600;
 }
 
-div#content h2 {
-  color: #ee6600;
-  letter-spacing: 0.1em;
-  font-style: italic;
+div#CONTENT h2 {
+  font-family: Palatino,Adobe Palatino,URW Palladio,URW Palladio L,Palladio,Bitstream Vera Serif,Times,Georgia,serif;
+  color: #996633;
 }
 
-div#content h3,
-div#content h4,
-div#content h5,
-div#content h6 {
-  text-indent: -1em;
-  letter-spacing: 0.15em;
+div#CONTENT h3 {
+  color: #996633;
 }
 
-div#content h4 {
-  font-style: italic;
+div#CONTENT h3 {
+  color: #996633;
 }
 
-WPAGE_MORE {
-  color: #444;
+div#CONTENT h4 {
+  color: #996633;
+}
+div#CONTENT h5 {
+  color: #996633;
 }
 
-WPAGE_MORE .info,
-WPAGE_MORE .menu,
-WPAGE_MORE .warn {
-  font-family: Sans, Arial, Helvetica;
+div#CONTENT h6 {
+  color: #996633;
+}
+
+div#MORE {
+  color: #333300;
+}
+
+div#CONTENT a:link,
+div#CONTENT a:visited {
+  text-decoration: none;
+}
+
+div#CONTENT a:hover {
+  background: #FFFFCC;
+}
+
+div#MORE .news ,
+div#MORE .link_page ,
+div#MORE .link_local ,
+div#MORE .link_external ,
+div#MORE .action  {
+  font-family: Adobe Helvetica,Helvetica,Arial,Verdana,Bitstream Vera Sans,sans-serif,sans;
+  font-size: 80%;
   border-style: solid;
   border-width: 1px;
   margin-top: 2em;
 }
 
-WPAGE_MORE .menu .title,
-WPAGE_MORE .info .title,
-WPAGE_MORE .warn .title {
+div#MORE .news .title,
+div#MORE .link_page .title,
+div#MORE .link_local .title,
+div#MORE .link_external .title,
+div#MORE .action .title {
   font-weight: bold;
   line-height: 100%;
   letter-spacing: 0.15em;
   padding: 5px;
 }
 
-WPAGE_MORE .info .body,
-WPAGE_MORE .warn .body {
-  letter-spacing: 0.15em;
+div#MORE .news .body,
+div#MORE .link_page .body,
+div#MORE .link_local .body,
+div#MORE .link_external .body,
+div#MORE .action .body {
   padding: 5px;
   line-height: 140%;
 }
 
 /* Texte */
 
-div#content {
+div#CONTENT {
   line-height: 160%;
 }
 
 /* Couleurs */
 
-WPAGE_MORE .info {
-  border-color: #F8D583;
-  background: #ffd;
-}
-
-WPAGE_MORE .info .title {
-  background: #F8D583;
-}
-
-WPAGE_MORE .warn {
-  border-color: #C5D5A9;
+div#MORE .link_external .body {
+  border-color: #9999CC;
   background: #eee;
 }
 
-WPAGE_MORE .warn .title {
-  background: #C5D5A9;
+div#MORE .link_external .title {
+  background: #9999CC;
 }
 
-WPAGE_MORE .menu {
-  border-color: #F8D583;
-  background: #ffd;
+
+div#MORE .link_page .body {
+  border-color: #CCCCFF;
+  background: #eee;
 }
 
-WPAGE_MORE .menu .title {
-  background: #F8D583;
+div#MORE .link_page .title {
+  background: #99CC99;
+}
+
+
+div#MORE .link_local .body {
+  border-color: #CCFFCC;
+  background: #eee;
+}
+
+div#MORE .link_local .title {
+  background: #CC9999;
+}
+
+
+div#MORE .news .body {
+  border-color: #FFCC66;
+  background: #FFFFCC;
+}
+
+div#MORE .news .title {
+  background: #FFCC66;
+}
+
+
+/* Listes de liens */
+
+div#MORE .link_page ul,
+div#MORE .link_local ul,
+div#MORE .link_external ul {
+  padding-left: 2em;
+  padding-right: 1em;
+}
+
+div#MORE .link_page li a,
+div#MORE .link_local li a,
+div#MORE .link_external li a {
+  text-decoration: none;
+}
+
+div#MORE .link_page li a:hover,
+div#MORE .link_local li a:hover,
+div#MORE .link_external li a:hover {
+  text-decoration: underline;
+}
+
+div#TITLE p#INTRODUCTION{
+  font-family: Sans Serif;
+}
+
+div#TITLE p#LEGALISM {
+  font-family: Palatino,Adobe Palatino,URW Palladio,URW Palladio L,Palladio,Bitstream Vera Serif,Times,Georgia,serif;
+  font-size: 80%;
+  text-align: justify;
+  color: #CCCCCC;
+}
+
+div#TITLE p#LEGALISM:hover {
+  color: black;
 }
